--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,7 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - name: compile test binary
-              run: make -j4
+              run: make release -j4
             - name: test
               run: ./sedimentation testfile.asm -o test
             - name: check output of test file
