--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,4 +17,4 @@ jobs:
             - name: test
               run: cd test && ../sedimentation testfile.asm -o test
             - name: check output of test file
-              run: diff ./test output.txt
+              run: ./test | diff - output.txt
