--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,9 +12,5 @@ jobs:
 
         steps:
             - uses: actions/checkout@v3
-            - name: compile test binary
-              run: make release -j4
-            - name: test
-              run: cd test && ../sedimentation testfile.asm -o test
-            - name: check output of test file
-              run: cd test && ./test | diff - output.txt
+            - name: run test
+              run: make test -j4
