--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -52,25 +52,25 @@ jobs:
                   ../sedimentation testfile.asm -o test.obj -f coff
                   ld test.obj -o test
                   test.exe > test.out.1
-                  diff (cat testfile.out.1) (testfile.out)
+                  diff (cat testfile.out.1) (cat testfile.out)
             - name: Test assembling with external symbols
               run: |
                   cd test
                   ../sedimentation testc.asm -o testc.obj -f coff
                   gcc -nostartfiles testc.obj -o testc
                   testc.exe > testc.out.1
-                  diff (cat testc.out.1) (testc.out)
+                  diff (cat testc.out.1) (cat testc.out)
             - name: Test SSE instructions
               run: |
                   cd test
                   ../sedimentation testsse.asm -o testsse.obj -f coff
                   gcc -nostartfiles testsse.obj -o testsse
                   testsse.exe > testsse.out.1
-                  diff (cat testsse.out.1) (testsse.out)
+                  diff (cat testsse.out.1) (cat testsse.out)
             - name: Test AVX instructions
               run: |
                   cd test
                   ../sedimentation testavx.asm -o testavx.obj -f coff
                   gcc -nostartfiles testavx.obj -o testavx
                   testavx.exe > testavx.out.1
-                  diff (cat testavx.out.1) (testavx.out)
+                  diff (cat testavx.out.1) (cat testavx.out)
