Update actions triggers to not include push to main

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,7 +2,7 @@ name: C/C++ CI
 
 on:
     push:
-        branches: ["main", "testing"]
+        branches: ["testing"]
     pull_request:
         branches: ["main"]
 
