Remove tests for now

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,40 +1,40 @@
-name: C/C++ CI
+# name: C/C++ CI
 
-on:
-    push:
-        branches: ["testing"]
-    pull_request:
-        branches: ["main"]
+# on:
+#     push:
+#         branches: ["testing"]
+#     pull_request:
+#         branches: ["main"]
 
-jobs:
-    linux-test:
-        runs-on: ubuntu-latest
+# jobs:
+#     linux-test:
+#         runs-on: ubuntu-latest
 
-        steps:
-            - uses: actions/checkout@v3
-            - name: compile test binary
-              run: make release -j4
-            - name: Test normal assembling
-              run: |
-                  cd test
-                  ../sedimentation testfile.asm -o test.o
-                  ld test.o -o test
-                  ./test | diff - testfile.out
-            - name: Test assembling with external symbols
-              run: |
-                  cd test
-                  ../sedimentation testc.asm -o testc.o
-                  gcc -nostartfiles testc.o -o testc
-                  ./testc | diff - testc.out
-            - name: Test SSE instructions
-              run: |
-                  cd test
-                  ../sedimentation testsse.asm -o testsse.o
-                  gcc -nostartfiles testsse.o -o testsse
-                  ./testsse | diff - testsse.out
-            - name: Test AVX instructions
-              run: |
-                  cd test
-                  ../sedimentation testavx.asm -o testavx.o
-                  gcc -nostartfiles testavx.o -o testavx
-                  ./testavx | diff - testavx.out
+#         steps:
+#             - uses: actions/checkout@v3
+#             - name: compile test binary
+#               run: make release -j4
+#             - name: Test normal assembling
+#               run: |
+#                   cd test
+#                   ../sedimentation testfile.asm -o test.o
+#                   ld test.o -o test
+#                   ./test | diff - testfile.out
+#             - name: Test assembling with external symbols
+#               run: |
+#                   cd test
+#                   ../sedimentation testc.asm -o testc.o
+#                   gcc -nostartfiles testc.o -o testc
+#                   ./testc | diff - testc.out
+#             - name: Test SSE instructions
+#               run: |
+#                   cd test
+#                   ../sedimentation testsse.asm -o testsse.o
+#                   gcc -nostartfiles testsse.o -o testsse
+#                   ./testsse | diff - testsse.out
+#             - name: Test AVX instructions
+#               run: |
+#                   cd test
+#                   ../sedimentation testavx.asm -o testavx.o
+#                   gcc -nostartfiles testavx.o -o testavx
+#                   ./testavx | diff - testavx.out
